--- a/bin/log4j.properties
+++ b/bin/log4j.properties
@@ -4,3 +4,8 @@ log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
 log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.consoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
 log4j.rootLogger=INFO, consoleAppender
+
+#log4j.appender.archivo=org.apache.log4j.FileAppender
+#log4j.appender.archivo.File=C:/Anita/WorkspaceISG2/isg20/src/test/java/prueba.log
+#log4j.appender.archivo.layout=org.apache.log4j.PatternLayout
+#log4j.appender.archivo.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
