--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,11 +1,24 @@
-# definir la consola appender
-log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
-#definir el layout del appender
-log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.consoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
-log4j.rootLogger=INFO, consoleAppender
+### Logger para la clase que indicamos ###
+#log4j.logger.com.jias=ALL,CONSOLA
 
-#log4j.appender.archivo=org.apache.log4j.FileAppender
-#log4j.appender.archivo.File=C:/Anita/WorkspaceISG2/isg20/src/test/java/prueba.log
-#log4j.appender.archivo.layout=org.apache.log4j.PatternLayout
-#log4j.appender.archivo.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+### Para dirigir mensajes a la salida estandar ###
+#log4j.appender.CONSOLA=org.apache.log4j.ConsoleAppender
+#La linea anterior permite definir el comportamiento del apender
+#log4j.appender.CONSOLA.Target=System.out
+#log4j.appender.CONSOLA.layout=org.apache.log4j.PatternLayout
+#log4j.appender.CONSOLA.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+
+
+### Root logger: Afecta (si es ALL a todos) los Logger ###
+log4j.rootCategory=INFO,ARCHIVO
+### Para dirigir mensajes a un archivo ###
+log4j.appender.ARCHIVO=org.apache.log4j.FileAppender
+#La linea anterior permite definir el comportamiento del apender
+#log4j.appender.ARCHIVO.Append=false
+#La linea anterior permite reescribir el archivo de registro log
+log4j.appender.ARCHIVO.File=registro.log
+#la linea anterior permite crear el archivo para alamacenar los logers
+log4j.appender.ARCHIVO.layout=org.apache.log4j.PatternLayout
+#la linea anterior determina en que formato se imprime o guarda la informacion
+log4j.appender.ARCHIVO.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
+#La linea anterior permite convertir el loger a una cadena de caracteres legibles
